--- a/.github/workflows/google-scholar-stats.yml
+++ b/.github/workflows/google-scholar-stats.yml
@@ -2,7 +2,7 @@ name: Update Google Scholar Stats
 
 on:
   schedule:
-    - cron: '0 8 * * *'  # 每天 8:00 UTC 运行
+    - cron: '0 */6 * * *'  # 每6小时运行一次
   workflow_dispatch:  # 允许手动触发
   push:
     branches:
@@ -25,6 +25,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install scholarly requests beautifulsoup4
+          
+      - name: Test citation stats script
+        run: |
+          TEST_MODE=1 python .github/scripts/update_citations.py
+        env:
+          GOOGLE_SCHOLAR_ID: ${{ secrets.GOOGLE_SCHOLAR_ID }}
           
       - name: Update citation stats
         run: python .github/scripts/update_citations.py
