--- a/.github/workflows/google-scholar-stats.yml
+++ b/.github/workflows/google-scholar-stats.yml
@@ -26,11 +26,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install scholarly requests beautifulsoup4
           
-      - name: Test citation stats script
-        run: |
-          TEST_MODE=1 python .github/scripts/update_citations.py
-        env:
-          GOOGLE_SCHOLAR_ID: ${{ secrets.GOOGLE_SCHOLAR_ID }}
+      # - name: Test citation stats script
+      #   run: |
+      #     TEST_MODE=1 python .github/scripts/update_citations.py
+      #   env:
+      #     GOOGLE_SCHOLAR_ID: ${{ secrets.GOOGLE_SCHOLAR_ID }}
           
       - name: Update citation stats
         run: python .github/scripts/update_citations.py
