--- a/.github/workflows/google-scholar-stats.yml
+++ b/.github/workflows/google-scholar-stats.yml
@@ -2,8 +2,8 @@ name: Update Google Scholar Stats
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # 每6小时运行一次
-  workflow_dispatch:  # 允许手动触发
+    - cron: '0 0 * * *'  # 每天运行一次
+  workflow_dispatch: 
   push:
     branches:
       - main
