--- a/.github/workflows/google-scholar-stats.yml
+++ b/.github/workflows/google-scholar-stats.yml
@@ -2,7 +2,7 @@ name: Update Google Scholar Stats
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天运行一次
+    - cron: '0 8 */3 * *'  # 每三天在中国时间 16:00 (UTC+8) 运行
   workflow_dispatch: 
   push:
     branches:
