--- a/.github/workflows/google-scholar-stats.yml
+++ b/.github/workflows/google-scholar-stats.yml
@@ -42,6 +42,7 @@ jobs:
         run: python .github/scripts/update_citations.py
         env:
           GOOGLE_SCHOLAR_ID: ${{ secrets.GOOGLE_SCHOLAR_ID }}
+          SCRAPINGBEE_API_KEY: ${{ secrets.SCRAPINGBEE_API_KEY || '' }}
         continue-on-error: true  # 即使失败也继续执行
         
       - name: Commit and push if changed
