--- a/.github/workflows/google-scholar-stats.yml
+++ b/.github/workflows/google-scholar-stats.yml
@@ -32,6 +32,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.22'
+          cache: false
 
       - name: Install mihomo (Clash) proxy client
         run: |
@@ -53,6 +54,18 @@ jobs:
           VMESS2_PORT: ${{ secrets.VMESS2_PORT }}
           VMESS2_UUID: ${{ secrets.VMESS2_UUID }}
         run: |
+          # Determine whether we have any proxy-related secrets
+          if [ -n "$CLASH_CONFIG" ] || [ -n "$CLASH_NODE_SS" ] || [ -n "$CLASH_NODE_VMESS1" ] || [ -n "$CLASH_NODE_VMESS2" ] ||
+             { [ -n "$SS1_SERVER" ] && [ -n "$SS1_PORT" ] && [ -n "$SS1_PASSWORD" ]; } ||
+             { [ -n "$VMESS1_SERVER" ] && [ -n "$VMESS1_PORT" ] && [ -n "$VMESS1_UUID" ]; } ||
+             { [ -n "$VMESS2_SERVER" ] && [ -n "$VMESS2_PORT" ] && [ -n "$VMESS2_UUID" ]; }; then
+            echo "PROXY_ENABLED=true" >> "$GITHUB_ENV"
+          else
+            echo "PROXY_ENABLED=false" >> "$GITHUB_ENV"
+            echo "No proxy secrets detected; skipping proxy config generation";
+            exit 0
+          fi
+
           if [ -n "$CLASH_CONFIG" ]; then
             printf "%s\n" "$CLASH_CONFIG" > clash.yaml
           else
@@ -131,10 +144,15 @@ jobs:
 
       - name: Start proxy client
         run: |
-          nohup $HOME/go/bin/mihomo -f clash.yaml >/dev/null 2>&1 &
-          sleep 3
-          # 简单连通性测试，不阻塞后续步骤
-          curl -x http://127.0.0.1:7890 -I https://scholar.google.com/robots.txt || true
+          if [ "$PROXY_ENABLED" = "true" ]; then
+            nohup $HOME/go/bin/mihomo -f clash.yaml > mihomo.log 2>&1 &
+            sleep 5
+            # Connectivity check and log snippet for debugging
+            curl -s -x http://127.0.0.1:7890 -I https://scholar.google.com/robots.txt || true
+            head -n 80 mihomo.log || true
+          else
+            echo "Proxy disabled; skipping start"
+          fi
           
       - name: Create data directory
         run: |
@@ -147,12 +165,15 @@ jobs:
       #     GOOGLE_SCHOLAR_ID: ${{ secrets.GOOGLE_SCHOLAR_ID }}
           
       - name: Update citation stats
-        run: python .github/scripts/update_citations.py
+        run: |
+          if [ "$PROXY_ENABLED" = "true" ]; then
+            export PROXY_LIST=http://127.0.0.1:7890
+            export HTTP_PROXY=http://127.0.0.1:7890
+            export HTTPS_PROXY=http://127.0.0.1:7890
+          fi
+          python .github/scripts/update_citations.py
         env:
           GOOGLE_SCHOLAR_ID: ${{ secrets.GOOGLE_SCHOLAR_ID }}
-          PROXY_LIST: http://127.0.0.1:7890
-          HTTP_PROXY: http://127.0.0.1:7890
-          HTTPS_PROXY: http://127.0.0.1:7890
         continue-on-error: true  # 即使失败也继续执行
         
       - name: Commit and push if changed
