--- a/.github/workflows/google-scholar-stats.yml
+++ b/.github/workflows/google-scholar-stats.yml
@@ -26,134 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 PySocks
-
-      - name: Set up Go (for proxy client)
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.22'
-          cache: false
-
-      - name: Install mihomo (Clash) proxy client
-        run: |
-          go install github.com/metacubex/mihomo@latest
-
-      - name: Generate proxy client config
-        env:
-          CLASH_CONFIG: ${{ secrets.CLASH_CONFIG }}
-          CLASH_NODE_SS: ${{ secrets.CLASH_NODE_SS }}
-          CLASH_NODE_VMESS1: ${{ secrets.CLASH_NODE_VMESS1 }}
-          CLASH_NODE_VMESS2: ${{ secrets.CLASH_NODE_VMESS2 }}
-          SS1_SERVER: ${{ secrets.SS1_SERVER }}
-          SS1_PORT: ${{ secrets.SS1_PORT }}
-          SS1_PASSWORD: ${{ secrets.SS1_PASSWORD }}
-          VMESS1_SERVER: ${{ secrets.VMESS1_SERVER }}
-          VMESS1_PORT: ${{ secrets.VMESS1_PORT }}
-          VMESS1_UUID: ${{ secrets.VMESS1_UUID }}
-          VMESS2_SERVER: ${{ secrets.VMESS2_SERVER }}
-          VMESS2_PORT: ${{ secrets.VMESS2_PORT }}
-          VMESS2_UUID: ${{ secrets.VMESS2_UUID }}
-        run: |
-          # Determine whether we have any proxy-related secrets
-          if [ -n "$CLASH_CONFIG" ] || [ -n "$CLASH_NODE_SS" ] || [ -n "$CLASH_NODE_VMESS1" ] || [ -n "$CLASH_NODE_VMESS2" ] ||
-             { [ -n "$SS1_SERVER" ] && [ -n "$SS1_PORT" ] && [ -n "$SS1_PASSWORD" ]; } ||
-             { [ -n "$VMESS1_SERVER" ] && [ -n "$VMESS1_PORT" ] && [ -n "$VMESS1_UUID" ]; } ||
-             { [ -n "$VMESS2_SERVER" ] && [ -n "$VMESS2_PORT" ] && [ -n "$VMESS2_UUID" ]; }; then
-            echo "PROXY_ENABLED=true" >> "$GITHUB_ENV"
-          else
-            echo "PROXY_ENABLED=false" >> "$GITHUB_ENV"
-            echo "No proxy secrets detected; skipping proxy config generation";
-            exit 0
-          fi
-
-          if [ -n "$CLASH_CONFIG" ]; then
-            printf "%s\n" "$CLASH_CONFIG" > clash.yaml
-          else
-            # Header
-            cat > clash.yaml <<'EOF'
-            mixed-port: 7890
-            allow-lan: true
-            mode: Rule
-            log-level: info
-            proxies:
-            EOF
-
-            # Option A: three simplified secrets with full YAML proxy entries
-            if [ -n "$CLASH_NODE_SS" ]; then
-              printf "%s\n" "$CLASH_NODE_SS" >> clash.yaml
-            fi
-            if [ -n "$CLASH_NODE_VMESS1" ]; then
-              printf "%s\n" "$CLASH_NODE_VMESS1" >> clash.yaml
-            fi
-            if [ -n "$CLASH_NODE_VMESS2" ]; then
-              printf "%s\n" "$CLASH_NODE_VMESS2" >> clash.yaml
-            fi
-
-            # Option B: fall back to per-field secrets (if provided)
-            if [ -n "$SS1_SERVER" ] && [ -n "$SS1_PORT" ] && [ -n "$SS1_PASSWORD" ]; then
-              cat >> clash.yaml <<EOF
-              - name: Lite-家庭宽带-香港HGC-1X-SS
-                type: ss
-                server: $SS1_SERVER
-                port: $SS1_PORT
-                cipher: chacha20-ietf-poly1305
-                password: $SS1_PASSWORD
-                udp: true
-          EOF
-            fi
-            if [ -n "$VMESS1_SERVER" ] && [ -n "$VMESS1_PORT" ] && [ -n "$VMESS1_UUID" ]; then
-              cat >> clash.yaml <<EOF
-              - name: Pro-家庭宽带-香港HKBN-1X-VMESS
-                type: vmess
-                server: $VMESS1_SERVER
-                port: $VMESS1_PORT
-                uuid: $VMESS1_UUID
-                alterId: 0
-                cipher: auto
-                udp: true
-          EOF
-            fi
-            if [ -n "$VMESS2_SERVER" ] && [ -n "$VMESS2_PORT" ] && [ -n "$VMESS2_UUID" ]; then
-              cat >> clash.yaml <<EOF
-              - name: Pro-家庭宽带-香港CMHK-1X-VMESS
-                type: vmess
-                server: $VMESS2_SERVER
-                port: $VMESS2_PORT
-                uuid: $VMESS2_UUID
-                alterId: 0
-                cipher: auto
-                udp: true
-          EOF
-            fi
-
-            # Footer
-            cat >> clash.yaml <<'EOF'
-            proxy-groups:
-              - name: Proxy
-                type: fallback
-                proxies:
-                  - Lite-家庭宽带-香港HGC-1X-SS
-                  - Pro-家庭宽带-香港HKBN-1X-VMESS
-                  - Pro-家庭宽带-香港CMHK-1X-VMESS
-                url: http://www.gstatic.com/generate_204
-                interval: 120
-            rules:
-              - MATCH, Proxy
-            EOF
-          fi
-
-      - name: Start proxy client
-        run: |
-          if [ "$PROXY_ENABLED" = "true" ]; then
-            nohup $HOME/go/bin/mihomo -f clash.yaml > mihomo.log 2>&1 &
-            sleep 5
-            # Connectivity check and log snippet for debugging
-            curl -s -x http://127.0.0.1:7890 -I https://scholar.google.com/robots.txt || true
-            head -n 80 mihomo.log || true
-          else
-            echo "Proxy disabled; skipping start"
-          fi
-          
+          pip install requests
       - name: Create data directory
         run: |
           mkdir -p data
@@ -166,14 +39,10 @@ jobs:
           
       - name: Update citation stats
         run: |
-          if [ "$PROXY_ENABLED" = "true" ]; then
-            export PROXY_LIST=http://127.0.0.1:7890
-            export HTTP_PROXY=http://127.0.0.1:7890
-            export HTTPS_PROXY=http://127.0.0.1:7890
-          fi
           python .github/scripts/update_citations.py
         env:
           GOOGLE_SCHOLAR_ID: ${{ secrets.GOOGLE_SCHOLAR_ID }}
+          SERPAPI_API_KEY: ${{ secrets.SERPAPI_API_KEY }}
         continue-on-error: true  # 即使失败也继续执行
         
       - name: Commit and push if changed
